--- a/TEST_SITE/Content/css/style.css
+++ b/TEST_SITE/Content/css/style.css
@@ -418,6 +418,15 @@ a {
     text-decoration: none;
 }
 
+.table_rendu{
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-collapse: collapse;
+    width: 70%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
 .icone { width: 16px; }
 
